<?xml version="1.0" encoding="UTF-8"?>
<!--

    (c) https://github.com/MontiCore/monticore

    The license generally applicable for this project
    can be found under https://github.com/MontiCore/monticore.

-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <!-- PARENT PROJECT -->
    <parent>
        <artifactId>simulation</artifactId>
        <groupId>montisim</groupId>
        <version>${revision}</version>
    </parent>

    <!-- OUR OWN PROJECT -->
    <artifactId>environment</artifactId>
    <groupId>montisim-simulation</groupId>
    <version>${revision}</version>

    <!-- Repository for osm4j -->
    <repositories>
        <repository>
            <id>topobyte</id>
            <url>http://mvn.topobyte.de</url>
        </repository>
    </repositories>

    <!-- PROJECT DEPENDENCIES -->
    <dependencies>

        <!-- All modules have dependency to util -->
        <dependency>
            <groupId>montisim-simulation</groupId>
            <artifactId>util</artifactId>
            <version>${revision}</version>
        </dependency>

        <!-- Dependency to control -->
        <dependency>
            <groupId>montisim-controller</groupId>
            <artifactId>control</artifactId>
            <version>${controller.version}</version>
        </dependency>

        <!-- Dependency on structures.Graph class -->
        <dependency>
            <groupId>montisim-controller</groupId>
            <artifactId>library</artifactId>
            <version>${controller.version}</version>
        </dependency>

        <dependency>
            <groupId>de.topobyte</groupId>
            <artifactId>osm4j-core</artifactId>
            <version>0.0.18</version>
        </dependency>
        <dependency>
            <groupId>de.topobyte</groupId>
            <artifactId>osm4j-utils</artifactId>
            <version>0.0.22</version>
        </dependency>
        <dependency>
            <groupId>de.topobyte</groupId>
            <artifactId>osm4j-xml</artifactId>
            <version>0.0.3</version>
        </dependency>
        <dependency>
            <groupId>de.topobyte</groupId>
            <artifactId>osm4j-pbf</artifactId>
            <version>0.0.7</version>
        </dependency>
        <dependency>
            <groupId>de.topobyte</groupId>
            <artifactId>osm4j-tbo</artifactId>
            <version>0.0.9</version>
        </dependency>
        <dependency>
            <groupId>de.topobyte</groupId>
            <artifactId>osm4j-geometry</artifactId>
            <version>0.0.14</version>
        </dependency>

        <dependency>
            <groupId>de.topobyte</groupId>
            <artifactId>adt-geo</artifactId>
            <version>0.0.2</version>
        </dependency>
        <dependency>
            <groupId>de.topobyte</groupId>
            <artifactId>jts2awt</artifactId>
            <version>0.0.1</version>
        </dependency>
        <dependency>
            <groupId>de.topobyte</groupId>
            <artifactId>mercator-image</artifactId>
            <version>0.0.1</version>
        </dependency>

        <dependency>
            <groupId>org.wololo</groupId>
            <artifactId>jts2geojson</artifactId>
            <version>0.6.0
            </version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-compress</artifactId>
            <version>1.8
            </version>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.6.1</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-log4j12</artifactId>
            <version>1.6.1</version>
        </dependency>

        <!-- testing -->
        <dependency>
            <groupId>com.github.stefanbirkner</groupId>
            <artifactId>system-rules</artifactId>
            <version>1.19.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-module-junit4</artifactId>
            <version>2.0.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.powermock</groupId>
            <artifactId>powermock-api-mockito2</artifactId>
            <version>2.0.2</version>
            <scope>test</scope>
        </dependency>
    </dependencies>


    <!-- PROJECT PLUGINS AND PROPERTIES -->
    <build>
        <resources>
            <resource>
                <directory>src/test/data</directory>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.22.1</version>
                <configuration>
                    <useSystemClassLoader>false</useSystemClassLoader>
                    <!-- Set root directory to ensure same execution context in subprojects 
                        (e.g. for Log in test mode) -->
                    <workingDirectory>${project.parent.basedir}</workingDirectory>
                    <forkCount>1</forkCount>
                    <reuseForks>true</reuseForks>
                    <argLine>-Xmx2048m -XX:MaxPermSize=1024m</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <properties>

        <!-- Set root directory to ensure same execution context in subprojects 
            (e.g. for Log in test mode) -->
        <!-- <main.basedir>${project.parent.basedir}</main.basedir> -->

        <!-- Specify Java 8 as version to avoid compile warnings -->
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
    </properties>


</project>
